<resources>
    <string name="app_name">buttelmann.02.03.2023</string>
    <string name="autor">Rocky Buttelmann</string>
    <string name="absenden">Absenden</string>
    <string name="text">Text</string>
    <string name="edittext">Edittext</string>
    <string name="button">Button</string>
    <string name="huhu">huhu</string>
    <string name="red">RED</string>
    <string name="yellow">YELLOW</string>
    <string name="orange">ORANGE</string>
    <string name="blue">BLUE</string>
    <string name="green">GREEN</string>
    <string name="indigo">INDIGO</string>
    <string name="violet">VIOLET</string>
    <string name="anmeldung_mit_sicherheitspin">Anmeldung mit Sicherheitspin</string>
    <string name="_2">2</string>
    <string name="del">DEL</string>
    <string name="_0">0</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_1">1</string>
    <string name="esc">esc</string>
</resources>