<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">
    <TextView
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:text="@string/red"
        android:id="@+id/textred"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:background="@color/red"
        android:gravity="center"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        />

    <TextView
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:text="@string/orange"
        android:id="@+id/textorange"
        android:layout_alignParentTop="true"
        android:background="@color/orange"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="2dp"
        />

    <TextView
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:text="@string/yellow"
        android:id="@+id/textyellow"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@color/yellow"
        android:gravity="center"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        />

    <TextView
        android:id="@+id/textblue"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:background="@color/blue"
        android:gravity="center"
        android:text="@string/blue"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textgreen"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:layout_marginEnd="2dp"
        android:layout_toStartOf="@+id/textblue"
        android:background="@color/green"
        android:gravity="center"
        android:text="@string/green" />

    <TextView
        android:id="@+id/textindigo"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="2dp"
        android:layout_toEndOf="@id/textblue"
        android:background="@color/indigo"
        android:gravity="center"
        android:text="@string/indigo"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/violet"
        android:id="@+id/textviolet"
        android:background="@color/violet"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginBottom="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        />




</RelativeLayout>