<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_background">

    <androidx.cardview.widget.CardView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        app:cardCornerRadius="100dp"
        android:layout_margin="50dp"
        >

        <ImageView
            android:id="@+id/smiley"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/smiley"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/anmeldung_mit_sicherheitspin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anmeldung_mit_sicherheitspin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        />

    <ImageView
        android:id="@+id/red_circle"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/shape_red_circle"
        android:layout_marginTop="250dp"
        android:layout_marginStart="140dp"
        android:layout_marginEnd="5dp"/>

    <ImageView
        android:id="@+id/grey_circle_1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/shape_grey_circle"
        android:layout_toEndOf="@+id/red_circle"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="5dp"/>

    <ImageView
        android:id="@+id/grey_circle_2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/shape_grey_circle"
        android:layout_toEndOf="@+id/grey_circle_1"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="5dp"/>

    <ImageView
        android:id="@+id/grey_circle_3"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/shape_grey_circle"
        android:layout_toEndOf="@+id/grey_circle_2"
        android:layout_marginTop="250dp"
        />


    <Button
        android:id="@+id/button2"
        android:layout_width="61dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/_2"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="61dp"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/button2"
        android:layout_centerInParent="true"
        android:text="@string/_1"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="61dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_toEndOf="@id/button2"
        android:text="@string/_3"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="61dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/button2"
        android:layout_centerInParent="true"
        android:layout_toStartOf="@id/button5"
        android:text="@string/_4"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/button5"
        android:layout_width="61dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/_5"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/button6"
        android:layout_width="61dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/button2"
        android:layout_centerInParent="true"
        android:layout_toEndOf="@id/button5"
        android:text="@string/_6"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/button7"
        android:layout_width="61dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/button5"
        android:layout_toStartOf="@id/button8"
        android:text="@string/_7"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/button8"
        android:layout_width="61dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/button5"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/_8"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/button9"
        android:layout_width="61dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/button5"
        android:layout_toEndOf="@id/button8"
        android:text="@string/_9"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/button0"
        android:layout_width="61dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/button8"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/_0"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/button_del"
        android:layout_width="61dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/button8"
        android:layout_toEndOf="@id/button0"
        android:text="@string/del"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"/>





</RelativeLayout>