<?xml version="1.0" encoding="utf-8"?>
<!-- Root / Parent nur 1 Rootelement erlaubt -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".MainActivity"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:background="@color/white"
        android:layout_margin="4dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
        android:background="@color/black"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="43"
            android:text="@string/text"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:background="@color/white"
            android:layout_margin="2dp"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="57"
            android:textSize="30sp"
            android:background="@color/white"
            android:layout_margin="2dp"
            android:hint="@string/huhu"
             />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
        android:background="@color/black"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="43"
            android:text="@string/text"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:background="@color/white"
            android:layout_margin="2dp"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="57"
            android:textSize="30sp"
            android:background="@color/white"
            android:layout_margin="2dp"
            android:hint="@string/huhu"

            />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:text="@string/button"
        android:textColor="@color/black"
        android:layout_margin="4dp"
        />



</LinearLayout>



